2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. 

2004-04-19  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdaexport.c: Removed.
	* src/rbgda.c: Removed call to Init_gda_export.
	* src/rbgdacommand.c: Fixed a compilation bug with GCC 2.9.XX,
	  reported by mezz7.
	* src/rbgdaconnection.c (#execute): Added as an alias 
	  to #execute_single_command.

2004-03-10  Laurent Sansonetti  <lrz@gnome.org>

	* README: We require libgda 1.0.3 or higher now (stable branch).
	* src/rbgdaprovider.c (#get_model),
	  src/rbgdaquarklist.c (#clear):
	  Disabled, because they are implemented in the
	  development branch of libgda.
	* tests/tc_all.rb: Follow API changes. 

2004-03-07  Laurent Sansonetti  <lrz@gnome.org>
                                                                                                                        
	* src/*.[ch]: Updated copyright.

2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Update Copyright.

2004-01-28  Nikolai Weibull  <source@pcppopper.org>

	* src/lib/libgda.rb: Added requirement on date.
	* src/rbgdavalaue.c: Added missing argument in call to
	rb_rb_value_to_gda_value_try_as_string().

2004-01-26  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdageometricpoint.c,
	  src/rbgdamoney.c,
	  src/rbgdatime.c:
	  Added new classes.
	* src/rbgda.c: Initializes Gda::GeometricPoint, Gda::Money and
	  Gda::Time + removed initialization for Gda::Value.
	* src/rbgda.h: Exported Gda::GeometricPoint, Gda::Money and
	  Gda::Time classes + fixed RGDA_VALUE and RGDA_VALUE_NEW macros.
	* src/rbgdadatamodel.c,
	  src/rbgdadatamodellist.c,
	  src/rbgdaparameter.c: 
	  Follow RGDA_VALUE changes.
	* src/rbgdafieldattributes.c: Removed #gdatype and #set_gdatype.
	* src/rbgdavalue.c: Added RB <-> GDA values conversion functions,
	  by Nikolai Weibull + removed old code.
	* tests/tc_all.rb: Follow these changes.

2004-01-14  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdarow.c: Added Gda::Row#[].